--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -5,14 +5,17 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - run: apt update
+      - run: apt install build-essential bc bison flex libncurses5-dev libssl-dev gcc-aarch64-linux-gnu lz4
+      - run: git clone https://github.com/kerneltoast/android_kernel_google_zuma.git
+      - run: cd ./android_kernel_google_zuma
+      - run: make zuma_defconf
+      - run: make -j$(nproc)
+      - run: cd ./out/google-modules/soc/gs/arch/arm64/boot/dts/google
+      - run: cat *.dtb > dtb
+      - run: cp ./dtb ../../../../../..
+      - run: cd ~/android_kernel_google_zuma
+      - run: cd ../../../../../../..
+      - run: 
+      - run: 
+      - run: 
